4-istio-demo/2-istio-basic/bookinfo/reviews-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService
metadata:
  name: reviews-virtualservice
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
