4-istio-demo/2-istio-basic/bookinfo/reviews-vs-split.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService
metadata:
  name: reviews-virtualservice
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
      weight: 75
    - destination:
        host: reviews
        subset: v3
      weight: 25
